syntax = "proto3"; 

import "database_metadata/service_messages.proto";
import "database_metadata/data.proto";
import "statement/data.proto";

package org.soedomoto.jdbc.grpc.database_metadata;

service DatabaseMetadataService {
    rpc AllProceduresAreCallable (Empty) returns (Boolean);
    rpc AllTablesAreSelectable (Empty) returns (Boolean);
    rpc GetURL (Empty) returns (String);
    rpc GetUserName (Empty) returns (String);
    rpc IsReadOnly (Empty) returns (Boolean);
    rpc NullsAreSortedHigh (Empty) returns (Boolean);
    rpc NullsAreSortedLow (Empty) returns (Boolean);
    rpc NullsAreSortedAtStart (Empty) returns (Boolean);
    rpc NullsAreSortedAtEnd (Empty) returns (Boolean);
    rpc GetDatabaseProductName (Empty) returns (String);
    rpc GetDatabaseProductVersion (Empty) returns (String);
    rpc GetDriverName (Empty) returns (String);
    rpc GetDriverVersion (Empty) returns (String);
    rpc GetDriverMajorVersion (Empty) returns (Integer);
    rpc GetDriverMinorVersion (Empty) returns (Integer);
    rpc UsesLocalFiles (Empty) returns (Boolean);
    rpc UsesLocalFilePerTable (Empty) returns (Boolean);
    rpc SupportsMixedCaseIdentifiers (Empty) returns (Boolean);
    rpc StoresUpperCaseIdentifiers (Empty) returns (Boolean);
    rpc StoresLowerCaseIdentifiers (Empty) returns (Boolean);
    rpc StoresMixedCaseIdentifiers (Empty) returns (Boolean);
    rpc SupportsMixedCaseQuotedIdentifiers (Empty) returns (Boolean);
    rpc StoresUpperCaseQuotedIdentifiers (Empty) returns (Boolean);
    rpc StoresLowerCaseQuotedIdentifiers (Empty) returns (Boolean);
    rpc StoresMixedCaseQuotedIdentifiers (Empty) returns (Boolean);
    rpc GetIdentifierQuoteString (Empty) returns (String);
    rpc GetSQLKeywords (Empty) returns (String);
    rpc GetNumericFunctions (Empty) returns (String);
    rpc GetStringFunctions (Empty) returns (String);
    rpc GetSystemFunctions (Empty) returns (String);
    rpc GetTimeDateFunctions (Empty) returns (String);
    rpc GetSearchStringEscape (Empty) returns (String);
    rpc GetExtraNameCharacters (Empty) returns (String);
    rpc SupportsAlterTableWithAddColumn (Empty) returns (Boolean);
    rpc SupportsAlterTableWithDropColumn (Empty) returns (Boolean);
    rpc SupportsColumnAliasing (Empty) returns (Boolean);
    rpc NullPlusNonNullIsNull (Empty) returns (Boolean);
    rpc SupportsConvert (Empty) returns (Boolean);
    rpc SupportsConvertFromTo (SupportsConvertRequest) returns (Boolean);
    rpc SupportsTableCorrelationNames (Empty) returns (Boolean);
    rpc SupportsDifferentTableCorrelationNames (Empty) returns (Boolean);
    rpc SupportsExpressionsInOrderBy (Empty) returns (Boolean);
    rpc SupportsOrderByUnrelated (Empty) returns (Boolean);
    rpc SupportsGroupBy (Empty) returns (Boolean);
    rpc SupportsGroupByUnrelated (Empty) returns (Boolean);
    rpc SupportsGroupByBeyondSelect (Empty) returns (Boolean);
    rpc SupportsLikeEscapeClause (Empty) returns (Boolean);
    rpc SupportsMultipleResultSets (Empty) returns (Boolean);
    rpc SupportsMultipleTransactions (Empty) returns (Boolean);
    rpc SupportsNonNullableColumns (Empty) returns (Boolean);
    rpc SupportsMinimumSQLGrammar (Empty) returns (Boolean);
    rpc SupportsCoreSQLGrammar (Empty) returns (Boolean);
    rpc SupportsExtendedSQLGrammar (Empty) returns (Boolean);
    rpc SupportsANSI92EntryLevelSQL (Empty) returns (Boolean);
    rpc SupportsANSI92IntermediateSQL (Empty) returns (Boolean);
    rpc SupportsANSI92FullSQL (Empty) returns (Boolean);
    rpc SupportsIntegrityEnhancementFacility (Empty) returns (Boolean);
    rpc SupportsOuterJoins (Empty) returns (Boolean);
    rpc SupportsFullOuterJoins (Empty) returns (Boolean);
    rpc SupportsLimitedOuterJoins (Empty) returns (Boolean);
    rpc GetSchemaTerm (Empty) returns (String);
    rpc GetProcedureTerm (Empty) returns (String);
    rpc GetCatalogTerm (Empty) returns (String);
    rpc IsCatalogAtStart (Empty) returns (Boolean);
    rpc GetCatalogSeparator (Empty) returns (String);
    rpc SupportsSchemasInDataManipulation (Empty) returns (Boolean);
    rpc SupportsSchemasInProcedureCalls (Empty) returns (Boolean);
    rpc SupportsSchemasInTableDefinitions (Empty) returns (Boolean);
    rpc SupportsSchemasInIndexDefinitions (Empty) returns (Boolean);
    rpc SupportsSchemasInPrivilegeDefinitions (Empty) returns (Boolean);
    rpc SupportsCatalogsInDataManipulation (Empty) returns (Boolean);
    rpc SupportsCatalogsInProcedureCalls (Empty) returns (Boolean);
    rpc SupportsCatalogsInTableDefinitions (Empty) returns (Boolean);
    rpc SupportsCatalogsInIndexDefinitions (Empty) returns (Boolean);
    rpc SupportsCatalogsInPrivilegeDefinitions (Empty) returns (Boolean);
    rpc SupportsPositionedDelete (Empty) returns (Boolean);
    rpc SupportsPositionedUpdate (Empty) returns (Boolean);
    rpc SupportsSelectForUpdate (Empty) returns (Boolean);
    rpc SupportsStoredProcedures (Empty) returns (Boolean);
    rpc SupportsSubqueriesInComparisons (Empty) returns (Boolean);
    rpc SupportsSubqueriesInExists (Empty) returns (Boolean);
    rpc SupportsSubqueriesInIns (Empty) returns (Boolean);
    rpc SupportsSubqueriesInQuantifieds (Empty) returns (Boolean);
    rpc SupportsCorrelatedSubqueries (Empty) returns (Boolean);
    rpc SupportsUnion (Empty) returns (Boolean);
    rpc SupportsUnionAll (Empty) returns (Boolean);
    rpc SupportsOpenCursorsAcrossCommit (Empty) returns (Boolean);
    rpc SupportsOpenCursorsAcrossRollback (Empty) returns (Boolean);
    rpc SupportsOpenStatementsAcrossCommit (Empty) returns (Boolean);
    rpc SupportsOpenStatementsAcrossRollback (Empty) returns (Boolean);
    rpc GetMaxBinaryLiteralLength (Empty) returns (Integer);
    rpc GetMaxCharLiteralLength (Empty) returns (Integer);
    rpc GetMaxColumnNameLength (Empty) returns (Integer);
    rpc GetMaxColumnsInGroupBy (Empty) returns (Integer);
    rpc GetMaxColumnsInIndex (Empty) returns (Integer);
    rpc GetMaxColumnsInOrderBy (Empty) returns (Integer);
    rpc GetMaxColumnsInSelect (Empty) returns (Integer);
    rpc GetMaxColumnsInTable (Empty) returns (Integer);
    rpc GetMaxConnections (Empty) returns (Integer);
    rpc GetMaxCursorNameLength (Empty) returns (Integer);
    rpc GetMaxIndexLength (Empty) returns (Integer);
    rpc GetMaxSchemaNameLength (Empty) returns (Integer);
    rpc GetMaxProcedureNameLength (Empty) returns (Integer);
    rpc GetMaxCatalogNameLength (Empty) returns (Integer);
    rpc GetMaxRowSize (Empty) returns (Integer);
    rpc DoesMaxRowSizeIncludeBlobs (Empty) returns (Boolean);
    rpc GetMaxStatementLength (Empty) returns (Integer);
    rpc GetMaxStatements (Empty) returns (Integer);
    rpc GetMaxTableNameLength (Empty) returns (Integer);
    rpc GetMaxTablesInSelect (Empty) returns (Integer);
    rpc GetMaxUserNameLength (Empty) returns (Integer);
    rpc GetDefaultTransactionIsolation (Empty) returns (Integer);
    rpc SupportsTransactions (Empty) returns (Boolean);
    rpc SupportsTransactionIsolationLevel (supportsTransactionIsolationLevelRequest) returns (Boolean);
    rpc SupportsDataDefinitionAndDataManipulationTransactions (Empty) returns (Boolean);
    rpc SupportsDataManipulationTransactionsOnly (Empty) returns (Boolean);
    rpc DataDefinitionCausesTransactionCommit (Empty) returns (Boolean);
    rpc DataDefinitionIgnoredInTransactions (Empty) returns (Boolean);
    rpc GetProcedures (GetProceduresRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetProcedureColumns (GetProcedureColumnsRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetCatalogs (GetMetadataRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetSchemas (GetMetadataRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetTableTypes (GetMetadataRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetTables (GetTablesRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetColumns (GetColumnsRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetColumnPrivileges (GetColumnPrivilegesRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetTablePrivileges (GetTablePrivilegesRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetBestRowIdentifier (GetBestRowIdentifierRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetVersionColumns (GetMetadataColumnsRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetPrimaryKeys (GetMetadataColumnsRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetImportedKeys (GetMetadataColumnsRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetExportedKeys (GetMetadataColumnsRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetCrossReference (GetCrossReferenceRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetTypeInfo (GetMetadataRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
    rpc GetIndexInfo (GetIndexInfoRequest) returns (org.soedomoto.jdbc.grpc.statement.ResultSet);
}